# cdk-python-lambda-layers

./: .gitignore  README.md  app.py  cdk.json  pyproject.toml  scripts.sh
infrastructure/: stack.py
lambda/echo/: main.py
lambda/echo2/: main.py
tests/: test_stack.py
